--- a/index.html
+++ b/index.html
@@ -6,6 +6,66 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <h1 class="common">Javier Antonio Valdera Contador</h1>
+
+    <p class="common">Computer engineer, Universidad de los Andes</p>
+    <p class="common">Year of University enrollment: 2021</p>
+    <a href="https://github.com/JaValderaContador?tab=overview&from=2024-02-01&to=2024-02-29">Link to my GitHub profile</a>
+    <p class="common">Personal Summary:</p>
+    <ul class="common">
+        <li>Bla bla bla</li>
+    </ul>
+    <p class="common">Skills:</p>
+
+    <table id="Skills-table">
+        <tr class="table-header">
+            <td>Skill</td>
+            <td>Level</td>
+        </tr>
+        <tr>
+            <td>Python</td>
+            <td>Expert</td>
+        </tr>
+        <tr>
+            <td>JavaScript</td>
+            <td>Advance</td>
+        </tr>
+        <tr>
+            <td>HTML/CSS</td>
+            <td>Medium</td>
+        </tr>
+        <tr>
+            <td>Git</td>
+            <td>Expert</td>
+        </tr>
+        <tr>
+            <td>Excel</td>
+            <td>Advance</td>
+        </tr>
+        <tr>
+            <td>SQL</td>
+            <td>Expert</td>
+        </tr>
+        <tr>
+            <td>Ruby</td>
+            <td>Basic</td>
+        </tr>
+        <tr>
+            <td>English</td>
+            <td>Expert</td>
+        </tr>
+        <tr>
+            <td>Spanish</td>
+            <td>Native</td>
+        </tr>
+        <tr>
+            <td>Russian</td>
+            <td>Advance</td>
+        </tr>
+        <tr>
+            <td>Italian</td>
+            <td>Medium</td>
+        </tr>
+    </table>
 </body>
 </html>
