--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 
     <p class="common">Computer engineer, Universidad de los Andes</p>
     <p class="common">Year of University enrollment: 2021</p>
-    <a href="https://github.com/JaValderaContador?tab=overview&from=2024-02-01&to=2024-02-29">Link to my GitHub profile</a>
+
+    <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
     <p class="common">Personal Summary:</p>
+
     <ul class="common">
         <li>Bla bla bla</li>
     </ul>
+
     <p class="common">Skills:</p>
 
     <table id="Skills-table">
