--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 
     <ul class="common">
         <li>Bla bla bla</li>
+        <li>Bla bla bla</li>
+        <li>Bla bla bla</li>
+        <li>Bla bla bla</li>
+        <li>Bla bla bla</li>
+        <li>Bla bla bla</li>
     </ul>
 
     <p class="common">Skills:</p>
@@ -70,5 +75,14 @@
             <td>Medium</td>
         </tr>
     </table>
+
+    <button class="button">Click me</button>
+    <form>
+        <label for="fname">First name:</label>
+        <input type="text"><br><br>
+        <label for="lname">Last name:</label>
+        <input type="text" id="lname" name="lname"><br><br>
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
