--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p class="common">Year of University enrollment: 2021</p>
 
     <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
-    <p class="common">Personal Summary:</p>
+    <p class="common underlined">Personal Summary:</p>
 
     <ul class="common">
         <li>Bla bla bla</li>
@@ -23,7 +23,7 @@
         <li>Bla bla bla</li>
     </ul>
 
-    <p class="common">Skills:</p>
+    <p class="common underlined">Skills:</p>
 
     <table id="Skills-table">
         <tr class="table-header">
