Index fully working

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </table>
 
     <div id="Comentaries" class="common">
-        <p class="common underlined">Leave your commentarie here</p>
+        <p class="common underlined">Leave a note here</p>
     </div>
 
     <input type="text" id="NewComment">
@@ -90,5 +90,10 @@
             commentaries.innerHTML = "<p>" + inputVal + "<p>";
         }
     </script>
+
+    <p></p>
+    
+    <a href="extra.html" class="link">Click here to see extra stuff</a>
+
 </body>
 </html>
