--- a/extra.html
+++ b/extra.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" class="link">Click me!</a>
 </body>
 </html>
