Personal Summary added

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
     <p class="common underlined">Personal Summary:</p>
 
     <ul class="common">
-        <li>Bla bla bla</li>
-        <li>Bla bla bla</li>
-        <li>Bla bla bla</li>
-        <li>Bla bla bla</li>
-        <li>Bla bla bla</li>
-        <li>Bla bla bla</li>
+        <li>Born in July 9th, 2002</li>
+        <li>Actual age: 21 y/o</li>
+        <li>Current location: La Florida, Santiago, Chile</li>
+        <li>Hobbies: Videogames, Racing & Music</li>
+        <li>An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
+        <li>Love state: In a relationship</li>
+        <li>Dream: To become a racing driver</li>
+        <li>Fav food: Sushi</li>
+        <li>Fav color: Green</li>
     </ul>
 
     <p class="common underlined">Skills:</p>
@@ -92,7 +95,7 @@
     </script>
 
     <p></p>
-    
+
     <a href="extra.html" class="link">Click here to see extra stuff</a>
 
 </body>
