--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="common">Javier Antonio Valdera Contador</h1>
+    <h1 class="common center">Javier Antonio Valdera Contador</h1>
 
-    <p class="common">Computer engineer, Universidad de los Andes</p>
-    <p class="common">Year of University enrollment: 2021</p>
+    <p class="common center">Computer engineer, Universidad de los Andes</p>
+    <p class="common center">Year of University enrollment: 2021</p>
 
     <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
     <p class="common underlined">Personal Summary:</p>
