--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </tr>
             <tr>
                 <td>Python</td>
-                <td>Expert</td>
+                <td class="colorful">Expert</td>
             </tr>
             <tr>
                 <td>JavaScript</td>
@@ -50,7 +50,7 @@
             </tr>
             <tr>
                 <td>Git</td>
-                <td>Expert</td>
+                <td class="colorful">Expert</td>
             </tr>
             <tr>
                 <td>Excel</td>
@@ -58,7 +58,7 @@
             </tr>
             <tr>
                 <td>SQL</td>
-                <td>Expert</td>
+                <td class="colorful">Expert</td>
             </tr>
             <tr>
                 <td>Ruby</td>
@@ -66,7 +66,7 @@
             </tr>
             <tr>
                 <td>English</td>
-                <td>Expert</td>
+                <td class="colorful">Expert</td>
             </tr>
             <tr>
                 <td>Spanish</td>
