--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
         <p></p>
 
         <a href="extra.html" class="link">Click here to see extra stuff</a>
+
+        <img src="we-ride-or-die.gif">
+
     </div>
 
 </body>
