--- a/github-links.html
+++ b/github-links.html
@@ -11,5 +11,8 @@
     <p></p>
 
     <a href="https://github.com/JaValderaContador/JaValderaContador.github.io" class="link">Link to this GitHub repository</a>
+
+    <img src="github-loading.gif" class="image_2">
+    
 </body>
 </html>
