--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
         <a href="extra.html" class="link">Click here to see extra stuff</a>
 
-        <img src="we-ride-or-die.gif">
+        <img src="we-ride-or-die.gif" class="image_1">
 
     </div>
 
