Minor grammar fix

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="content">
         <h1 class="common center">Javier Antonio Valdera Contador</h1>
 
-        <p class="common center">Computer engineer, Universidad de los Andes</p>
+        <p class="common center">Computer science, Universidad de los Andes</p>
         <p class="common center">Year of University enrollment: 2021</p>
 
         <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
