Gold animation added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li>Actual age: 21 y/o</li>
             <li>Current location: La Florida, Santiago, Chile</li>
             <li>Hobbies: Videogames, Racing & Music</li>
-            <li>An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
+            <li class="golden">An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
             <li>Love state: In a relationship</li>
             <li>Dream: To become a racing driver</li>
             <li>Fav food: Sushi</li>
