--- a/extra.html
+++ b/extra.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="background"></div>
+
+    <div class="content">
+
     <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" class="link">Click me!</a>
+
+    </div>
 </body>
 </html>
