--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 
         <img src="we-ride-or-die.gif" class="image_1">
 
+        <audio autoplay loop>
+            <source src="inspiring-cinematic-ambient-116199.mp3" type="audio/mpeg">
+        </audio>
+
     </div>
 
 </body>
