--- a/extra.html
+++ b/extra.html
@@ -12,6 +12,10 @@
 
     <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0" class="link">Click me!</a>
 
+    <audio autoplay loop>
+        <source src="dark-mystery-trailer-taking-our-time-131566.mp3" type="audio/mpeg">
+    </audio>
+
     </div>
 </body>
 </html>
