--- a/github-links.html
+++ b/github-links.html
@@ -14,5 +14,9 @@
 
     <img src="github-loading.gif" class="image_2">
     
+    <audio autoplay loop>
+        <source src="speed-thrill-beat-190669.mp3" type="audio/mpeg">
+    </audio>
+
 </body>
 </html>
