--- a/index.html
+++ b/index.html
@@ -89,13 +89,7 @@
         <input type="text" id="NewComment">
         <button onclick="addComment()">Add comment</button>
 
-        <script>
-            function addComment(){
-                var inputVal = document.getElementById("NewComment").value;
-                var commentaries = document.getElementById("Comentaries");
-                commentaries.innerHTML = "<p>" + inputVal + "<p>";
-            }
-        </script>
+        <script src="script.js"></script>
 
         <p></p>
 
