Cont&Col V1.0 Index

--- a/index.html
+++ b/index.html
@@ -11,78 +11,87 @@
     <div class="background"></div>
 
     <div class="content">
-        <h1 class="common center">Javier Antonio Valdera Contador</h1>
+        
+        <div class="container-sm container-lg">
+            <h1 class="common center">Javier Antonio Valdera Contador</h1>
 
-        <p class="common center">Computer science, Universidad de los Andes</p>
-        <p class="common center">Year of University enrollment: 2021</p>
+            <p class="common center">Computer science, Universidad de los Andes</p>
+            <p class="common center">Year of University enrollment: 2021</p>
+            <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
+        </div>
 
-        <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
-        <p class="common underlined">Personal Summary:</p>
+        <div class="container text-center">
+            <div class="row align-items-start">
+                <div class="col">
+                    Personal Summary
+                    <ul class="common">
+                        <li>Born in July 9th, 2002</li>
+                        <li>Actual age: 21 y/o</li>
+                        <li>Current location: La Florida, Santiago, Chile</li>
+                        <li>Hobbies: Videogames, Racing & Music</li>
+                        <li class="golden">An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
+                        <li>Love state: In a relationship</li>
+                        <li>Dream: To become a racing driver</li>
+                        <li>Fav food: Sushi</li>
+                        <li>Fav color: Green</li>
+                    </ul>
+                </div>
 
-        <ul class="common">
-            <li>Born in July 9th, 2002</li>
-            <li>Actual age: 21 y/o</li>
-            <li>Current location: La Florida, Santiago, Chile</li>
-            <li>Hobbies: Videogames, Racing & Music</li>
-            <li class="golden">An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
-            <li>Love state: In a relationship</li>
-            <li>Dream: To become a racing driver</li>
-            <li>Fav food: Sushi</li>
-            <li>Fav color: Green</li>
-        </ul>
-
-        <p class="common underlined">Skills:</p>
-
-        <table id="Skills-table">
-            <tr class="table-header">
-                <td>Skill</td>
-                <td>Level</td>
-            </tr>
-            <tr>
-                <td>Python</td>
-                <td class="colorful">Expert</td>
-            </tr>
-            <tr>
-                <td>JavaScript</td>
-                <td>Advance</td>
-            </tr>
-            <tr>
-                <td>HTML/CSS</td>
-                <td>Medium</td>
-            </tr>
-            <tr>
-                <td>Git</td>
-                <td class="colorful">Expert</td>
-            </tr>
-            <tr>
-                <td>Excel</td>
-                <td>Advance</td>
-            </tr>
-            <tr>
-                <td>SQL</td>
-                <td class="colorful">Expert</td>
-            </tr>
-            <tr>
-                <td>Ruby</td>
-                <td>Basic</td>
-            </tr>
-            <tr>
-                <td>English</td>
-                <td class="colorful">Expert</td>
-            </tr>
-            <tr>
-                <td>Spanish</td>
-                <td>Native</td>
-            </tr>
-            <tr>
-                <td>Russian</td>
-                <td>Advance</td>
-            </tr>
-            <tr>
-                <td>Italian</td>
-                <td>Medium</td>
-            </tr>
-        </table>
+                <div class="col">
+                    Skills
+                    <table id="Skills-table">
+                        <tr class="table-header">
+                            <td>Skill</td>
+                            <td>Level</td>
+                        </tr>
+                        <tr>
+                            <td>Python</td>
+                            <td class="colorful">Expert</td>
+                        </tr>
+                        <tr>
+                            <td>JavaScript</td>
+                            <td>Advance</td>
+                        </tr>
+                        <tr>
+                            <td>HTML/CSS</td>
+                            <td>Medium</td>
+                        </tr>
+                        <tr>
+                            <td>Git</td>
+                            <td class="colorful">Expert</td>
+                        </tr>
+                        <tr>
+                            <td>Excel</td>
+                            <td>Advance</td>
+                        </tr>
+                        <tr>
+                            <td>SQL</td>
+                            <td class="colorful">Expert</td>
+                        </tr>
+                        <tr>
+                            <td>Ruby</td>
+                            <td>Basic</td>
+                        </tr>
+                        <tr>
+                            <td>English</td>
+                            <td class="colorful">Expert</td>
+                        </tr>
+                        <tr>
+                            <td>Spanish</td>
+                            <td>Native</td>
+                        </tr>
+                        <tr>
+                            <td>Russian</td>
+                            <td>Advance</td>
+                        </tr>
+                        <tr>
+                            <td>Italian</td>
+                            <td>Medium</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
 
         <div id="Comentaries" class="common">
             <p class="common underlined">Leave a note here</p>
@@ -97,7 +106,9 @@
 
         <a href="extra.html" class="link">Click here to see extra stuff</a>
 
-        <img src="we-ride-or-die.gif" class="image_1">
+        <div class="container text-center">
+            <img src="we-ride-or-die.gif" class="image_1">
+        </div>
 
         <audio autoplay loop>
             <source src="inspiring-cinematic-ambient-116199.mp3" type="audio/mpeg">
