--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
         </div>
 
-        <div class="container text-center">
+        <div class="container-sm container-lg text-center">
             <div class="row align-items-start">
                 <div class="col">
                     Personal Summary
@@ -39,7 +39,7 @@
 
                 <div class="col">
                     Skills
-                    <table id="Skills-table">
+                    <table>
                         <tr class="table-header">
                             <td>Skill</td>
                             <td>Level</td>
@@ -92,22 +92,28 @@
                 </div>
             </div>
         </div>
-
-        <div id="Comentaries" class="common">
-            <p class="common underlined">Leave a note here</p>
-        </div>
-
-        <input type="text" id="NewComment">
-        <button onclick="addComment()">Add comment</button>
-
-        <script src="script.js"></script>
-
-        <p></p>
-
-        <a href="extra.html" class="link">Click here to see extra stuff</a>
-
-        <div class="container text-center">
-            <img src="we-ride-or-die.gif" class="image_1">
+        <div class="container-sm container-lg text-center">
+            <div class="row align-items-start">
+                <div class="col">
+                    Comentaries
+                    <div id="Comentaries" class="common">
+                        <p class="common underlined">Change this down below</p>
+                    </div>
+            
+                    <input type="text" id="NewComment">
+                    <button onclick="addComment()">Change</button>
+            
+                    <script src="script.js"></script>
+                </div>
+                <div class="col">
+                    <img src="we-ride-or-die.gif" class="image_1">
+                </div>
+                <div class="col">
+                    Extra Stuff
+                    <p></p>
+                    <a href="extra.html" class="link">Click here to see extra stuff</a>
+                </div>
+            </div>
         </div>
 
         <audio autoplay loop>
