--- a/index.html
+++ b/index.html
@@ -28,81 +28,105 @@
 
             <p class="common center">Computer science, Universidad de los Andes</p>
             <p class="common center">Year of University enrollment: 2021</p>
-            <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
         </div>
-
-        <div class="container-sm container-lg text-center">
-            <div class="row align-items-start">
-                <div class="col">
-                    Personal Summary
-                    <ul class="common">
-                        <li>Born in July 9th, 2002</li>
-                        <li>Actual age: 21 y/o</li>
-                        <li>Current location: La Florida, Santiago, Chile</li>
-                        <li>Hobbies: Videogames, Racing & Music</li>
-                        <li class="golden">An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
-                        <li>Love state: In a relationship</li>
-                        <li>Dream: To become a racing driver</li>
-                        <li>Fav food: Sushi</li>
-                        <li>Fav color: Green</li>
-                    </ul>
+        <div class="accordion" id="accordionExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                  GitHub links page
+                </button>
+              </h2>
+              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                <div class="accordion-body black_bg">
+                    <a href="github-links.html" class="link">Click here to reach GitHub Links</a>
                 </div>
-
-                <div class="col">
-                    Skills
-                    <table>
-                        <tr class="table-header">
-                            <td>Skill</td>
-                            <td>Level</td>
-                        </tr>
-                        <tr>
-                            <td>Python</td>
-                            <td class="colorful">Expert</td>
-                        </tr>
-                        <tr>
-                            <td>JavaScript</td>
-                            <td>Advance</td>
-                        </tr>
-                        <tr>
-                            <td>HTML/CSS</td>
-                            <td>Medium</td>
-                        </tr>
-                        <tr>
-                            <td>Git</td>
-                            <td class="colorful">Expert</td>
-                        </tr>
-                        <tr>
-                            <td>Excel</td>
-                            <td>Advance</td>
-                        </tr>
-                        <tr>
-                            <td>SQL</td>
-                            <td class="colorful">Expert</td>
-                        </tr>
-                        <tr>
-                            <td>Ruby</td>
-                            <td>Basic</td>
-                        </tr>
-                        <tr>
-                            <td>English</td>
-                            <td class="colorful">Expert</td>
-                        </tr>
-                        <tr>
-                            <td>Spanish</td>
-                            <td>Native</td>
-                        </tr>
-                        <tr>
-                            <td>Russian</td>
-                            <td>Advance</td>
-                        </tr>
-                        <tr>
-                            <td>Italian</td>
-                            <td>Medium</td>
-                        </tr>
-                    </table>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                  Personal Summary & Skills
+                </button>
+              </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse black_bg" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                        <div class="container-sm container-lg text-center">
+                            <div class="row align-items-start">
+                                <div class="col common">
+                                    Personal Summary
+                                    <ul class="common">
+                                        <li>Born in July 9th, 2002</li>
+                                        <li>Actual age: 21 y/o</li>
+                                        <li>Current location: La Florida, Santiago, Chile</li>
+                                        <li>Hobbies: Videogames, Racing & Music</li>
+                                        <li class="golden">An uncknown fact: Need For Speed: Rivals World Champion 2023</li>
+                                        <li>Love state: In a relationship</li>
+                                        <li>Dream: To become a racing driver</li>
+                                        <li>Fav food: Sushi</li>
+                                        <li>Fav color: Green</li>
+                                    </ul>
+                                </div>
+                
+                                <div class="col common">
+                                    Skills
+                                    <table>
+                                        <tr class="table-header">
+                                            <td>Skill</td>
+                                            <td>Level</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Python</td>
+                                            <td class="colorful">Expert</td>
+                                        </tr>
+                                        <tr>
+                                            <td>JavaScript</td>
+                                            <td>Advance</td>
+                                        </tr>
+                                        <tr>
+                                            <td>HTML/CSS</td>
+                                            <td>Medium</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Git</td>
+                                            <td class="colorful">Expert</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Excel</td>
+                                            <td>Advance</td>
+                                        </tr>
+                                        <tr>
+                                            <td>SQL</td>
+                                            <td class="colorful">Expert</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ruby</td>
+                                            <td>Basic</td>
+                                        </tr>
+                                        <tr>
+                                            <td>English</td>
+                                            <td class="colorful">Expert</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Spanish</td>
+                                            <td>Native</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Russian</td>
+                                            <td>Advance</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Italian</td>
+                                            <td>Medium</td>
+                                        </tr>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+        
         <div class="container-sm container-lg text-center">
             <div class="row align-items-start">
                 <div class="col">
@@ -163,8 +187,6 @@
         <audio autoplay loop>
             <source src="inspiring-cinematic-ambient-116199.mp3" type="audio/mpeg">
         </audio>
-
     </div>
-
 </body>
 </html>
