--- a/index.html
+++ b/index.html
@@ -143,10 +143,12 @@
             </div>
         </div>
         <p></p>
-        <div class="alert alert-warning d-flex align-items-center" role="alert">
-            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-            <div>
-              The content below may contain pranks
+        <div class="container-sm container-lg">
+            <div class="alert alert-warning d-flex align-items-center" role="alert">
+                <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+                <div>
+                  The content below may contain pranks
+                </div>
             </div>
         </div>
         <div class="container-sm container-lg text-center">
