--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <div class="background"></div>
     <div class="content">
-        <div class="container-sm container-lg">
+        <div class="container-md container-xl">
             <h1 class="common center">Javier Antonio Valdera Contador</h1>
 
             <p class="common center">Computer science, Universidad de los Andes</p>
@@ -48,7 +48,7 @@
               </h2>
             <div id="collapseTwo" class="accordion-collapse collapse black_bg" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                        <div class="container-sm container-lg text-center">
+                        <div class="container-md container-xl text-center">
                             <div class="row align-items-start">
                                 <div class="col common">
                                     Personal Summary
@@ -123,7 +123,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-sm container-lg text-center">
+        <div class="container-md container-xl text-center">
             <div class="row align-items-start">
                 <div class="col">
                     Comentaries
@@ -139,7 +139,7 @@
             </div>
         </div>
         <p></p>
-        <div class="container-sm container-lg">
+        <div class="container-md container-xl">
             <div class="alert alert-warning d-flex align-items-center" role="alert">
                 <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Warning:"><use xlink:href="#exclamation-triangle-fill"/></svg>
                 <div>
@@ -147,7 +147,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-sm container-lg text-center">
+        <div class="container-md container-xl text-center">
             <div class="row align-items-start">
                 <div class="col">
                     <img src="we-ride-or-die.gif" class="image_1">
