--- a/github-links.html
+++ b/github-links.html
@@ -9,7 +9,7 @@
 <body>
     <div class="background"></div>
     <div class="content">
-        <div class="container text-center">
+        <div class="container container-md container-xl text-center">
             <div class="row align-items-start">
               <div class="col-6 col-sm-3">
                 <a href="https://github.com/JaValderaContador?tab=overview&from=2024-02-01&to=2024-02-29" class="link">Link to my GitHub profile</a>
