Page Responsive Size fix (extra)

--- a/extra.html
+++ b/extra.html
@@ -23,15 +23,17 @@
     <div class="background"></div>
 
     <div class="content">
-    <a class="btn btn-lg btn-primary link big" href="https://www.youtube.com/watch?v=xvFZjo5PgG0" role="button">
-        I know you want to click me
-        <div class="alert alert-danger d-flex align-items-center" role="alert">
-            <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
-            <div>
-              WARNING!! PROCEED UNDER YOU OWN RESPONSABILITY
-            </div>
-        </div>
-    </a>
+      <div class="container container-md container-xl text-center">
+        <a class="btn btn-lg btn-primary link big" href="https://www.youtube.com/watch?v=xvFZjo5PgG0" role="button">
+          I know you want to click me
+          <div class="alert alert-danger d-flex align-items-center" role="alert">
+              <svg class="bi flex-shrink-0 me-2" role="img" aria-label="Danger:"><use xlink:href="#exclamation-triangle-fill"/></svg>
+              <div>
+                WARNING!! PROCEED UNDER YOU OWN RESPONSABILITY
+              </div>
+          </div>
+        </a>
+      </div>
 
     <audio autoplay loop>
         <source src="dark-mystery-trailer-taking-our-time-131566.mp3" type="audio/mpeg">
